--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <table border="0" cellpadding="0" cellspacing="6">
 <tr>
-<td><img src="img/cs_tvs.png"></td>
-<td><img src="img/cs_est.png"></td>
+<td><img id="img-table" src="img/cs_tvs.png"></td>
+<td><img id="img-table" src="img/cs_est.png"></td>
 </tr>
 </table>
 
