--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id="page">
-
+      <h1>Motion Estimation and Classification in Compressive Sensing from Dynamic Measurements</h1>   
 <table border="0" cellpadding="0" cellspacing="6">
 <tr>
 <td><img id="img-table" src="img/cs_tvs.png"></td>
@@ -34,6 +34,14 @@ algorithm in the compressive sensing domain by factoring in the
 time-varying nature of the acquisition process.
       </p>
     </sec-contents>
+
+  <sec-title>Publication</sec-title>
+    <sec-contents>
+<h2>Motion Estimation and Classification in Compressive Sensing from Dynamic Measurements</h2>
+          <p><i>Vijay Rengarajan</i>, A.N. Rajagopalan, and R. Aravind <br><i>International Conference on Pattern Recognition (ICPR),</i> Stockholm, Sweden <br>August 2014. <a href="pdf/icpr_2014_draft.pdf">PDF</a>
+          </p>
+    </sec-contents>
+
 
   </div>
 </body>
