--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@ time-varying nature of the acquisition process.
       </p><br><br>
     </sec-contents>
 
+    <sec-contents></sec-contents>
+    <sec-contents></sec-contents>
+
   <sec-title>Publication</sec-title>
     <sec-contents>
 <h2>Motion Estimation and Classification in Compressive Sensing from Dynamic Measurements</h2>
