--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id="page">
-      <h1>Motion Estimation and Classification in Compressive Sensing from Dynamic Measurements</h1>   
+      <h1><center>Motion Estimation and Classification in Compressive Sensing from Dynamic Measurements</center></h1>   
 <table border="0" cellpadding="0" cellspacing="6">
 <tr>
 <td><img id="img-table" src="img/cs_tvs.png"></td>
