--- a/index.html
+++ b/index.html
@@ -42,8 +42,16 @@ time-varying nature of the acquisition process.
     <sec-contents>
 <h2>Motion Estimation and Classification in Compressive Sensing from Dynamic Measurements</h2>
           <p><i>Vijay Rengarajan</i>, A.N. Rajagopalan, and R. Aravind <br><i>International Conference on Pattern Recognition (ICPR),</i> Stockholm, Sweden <br>August 2014. <a href="pdf/icpr_2014_draft.pdf">PDF</a>
-          </p>
+          </p><br><br>
     </sec-contents>
+
+<table border="0" cellpadding="0" cellspacing="6">
+<tr>
+<td><img id="img-table" src="img/cs_feret1.png"></td>
+<td><img id="img-table" src="img/cs_feret2.png"></td>
+</tr>
+</table>
+<br><br><br>
 
 
   </div>
